# agent-board

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  manifest  preprocess.py  pyproject.toml  serve.py
contrib/: agent-board.service
frontend/: __init__.py  app.js  index.html  style.css
preprocessor/: __init__.py  config.py  grouper.py  parser.py  paths.py  pipeline.py  scanner.py  writer.py
tests/: conftest.py  test_config.py  test_grouper.py  test_parser.py  test_paths.py  test_preprocess.py  test_scanner.py  test_serve.py  test_writer.py
tests/tui/: conftest.py  test_agent_bar.py  test_app.py  test_chat_view.py  test_data.py  test_detail_pane.py  test_nav_tree.py  test_refresh.py  test_search.py
tui/: __init__.py  __main__.py  app.py  data.py
tui/widgets/: __init__.py  agent_bar.py  chat_view.py  detail_pane.py  nav_tree.py  search_bar.py
